
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_alignParentBottom="true"
android:layout_alignParentLeft="true"
android:layout_alignParentStart="true"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.ndaarp.n_li8.ForgetPassword"
android:gravity="center_horizontal"
    >




<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:id="@+id/textView"

    android:textColor="@color/primaryColorDark"
    android:textSize="46dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_title"
    android:id="@+id/textView2"
    android:textColor="@color/color2"
    android:textSize="22dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget2"
        android:id="@+id/textView4"
        android:layout_gravity="left"
        android:textColor="@color/color2"
        android:textSize="22dp"/>

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:ems="20"
    android:id="@+id/editText3"
    android:layout_gravity="center_horizontal"
    android:textColor="@color/color2"
    android:hint="bits email"
    />



<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/send"
    android:id="@+id/button"
    android:layout_gravity="center_horizontal" />





</LinearLayout>




