
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:gravity="center_horizontal"
    >




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"

        android:textColor="@color/primaryColorDark"
        android:textSize="46dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/textView2"
        android:textColor="@color/color2"
        android:textSize="22dp"
        />

    <EditText
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="20"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color2"
        android:hint="bits email"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="20"
        android:id="@+id/editText2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color2"
        android:hint="password"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:textSize="28dp"
        android:onClick="viewdata"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:id="@+id/textView4"
        android:layout_gravity="right"
        android:textColor="@color/color2"
        android:textSize="22dp"/>

    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color2"
        android:textSize="26dp"
        android:clickable="true"/>


</LinearLayout>




