
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    >



        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.ndaarp.n_li8.Registration"
        android:gravity="center_horizontal"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView"

            android:textColor="@color/primaryColorDark"
            android:textSize="46dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/textView2"
            android:textColor="@color/color2"
            android:textSize="22dp"
            />

        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="20"
            android:id="@+id/editText4"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color2"
            android:hint="bits email"
            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="20"
        android:id="@+id/editText5"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color2"
        android:hint="bits id"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="20"
        android:id="@+id/editText6"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color2"
        android:hint="name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPhonetic"
        android:ems="20"
        android:id="@+id/editText7"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color2"
        android:hint="mobile no."
        />



    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="20"
            android:id="@+id/editText8"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color2"
            android:hint="password"
            />

            <!--
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/dob"
                       android:id="@+id/textView7"
                       android:layout_gravity="left"
                       android:textColor="@color/color2"
                       android:textSize="20dp"/>


                   <DatePicker
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/datePicker"
                       android:calendarViewShown="false"
                       android:datePickerMode="spinner" />
                       -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hostel"
                android:id="@+id/textView8"
                android:layout_gravity="left"
                android:textColor="@color/color2"
                android:textSize="20dp"/>

            <Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/hostels"
                android:prompt="@string/hostel"
                android:ems="20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="20"
                android:id="@+id/editText9"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color2"
                android:hint="room no."
                />


            <Button
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:textSize="28dp"
                android:onClick="addUser"/>

    </LinearLayout>




</ScrollView>
